--- a/index.html
+++ b/index.html
@@ -16,13 +16,15 @@
                     <div id="logo-header"></div>
                     <div id="panier-header"></div>
                 </div>
-                <div id="p-header">
-                    <p>Fat Kitchen</p>
+                <div id="h1-header">
+                    <h1>Fat Kitchen</h1>
+                </div>
+                <div id="p-description">
+                    <p>Fat Kitchen vous propose, le temps d'un repas, de vous plonger dans un univers gras et coloré, où le plaisir des papilles est roi. Profitez des saveurs les plus réconfortantes, élaborées grâce aux produits les plus caloriques du marché.</p>
                 </div>
             </div>
         </header>
         <main>
-            <div id="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil dolore mollitia odit laborum dolor ad facilis culpa hic saepe quas dolorum placeat, consequuntur, maxime quaerat labore velit. Explicabo, amet aspernatur.</div>
             <div id="cartes">
                 <div id="carte-végé">
                     <div id="v-titre"></div>
