--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../assets/style.css">
     <script defer src="script.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&family=Nerko+One&family=Roboto&display=swap" rel="stylesheet">
+    <style> @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:opsz,wght@9..144,700;9..144,900&family=Nerko+One&family=Roboto&display=swap'); </style>
 </head>
 <body>
     <div class="container">
@@ -20,26 +24,26 @@
                     <h1>Fat Kitchen</h1>
                 </div>
                 <div id="p-description">
-                    <p>Fat Kitchen vous propose, le temps d'un repas, de vous plonger dans un univers gras et coloré, où le plaisir des papilles est roi. Profitez des saveurs les plus réconfortantes, élaborées grâce aux produits les plus caloriques du marché.</p>
+                    <p>Fat Kitchen vous propose, le temps d'un repas, de vous plonger dans un univers gras et coloré, où le plaisir des papilles est roi. En un clic, nous vous livrons directement chez vous. Profitez de nos saveurs réconfortantes, élaborées grâce aux produits les plus caloriques du marché !</p>
                 </div>
             </div>
         </header>
         <main>
             <div id="cartes">
                 <div id="carte-végé">
-                    <div id="v-titre"></div>
+                    <div id="v-titre"><p class="végé-txt">Végé</p></div>
                     <div id="v-plat-1"></div>
                     <div id="v-plat-2"></div>
                     <div id="v-plat-3"></div>
                 </div>
                 <div id="carte-sucré">
-                    <div id="s-titre"></div>
+                    <div id="s-titre"><p class="sucré-txt">Sucré</p></div>
                     <div id="s-plat-1"></div>
                     <div id="s-plat-2"></div>
                     <div id="s-plat-3"></div>
                 </div>
                 <div id="carte-bouffé">
-                    <div id="b-titre"></div>
+                    <div id="b-titre"><p class="bouffé-txt">Bouffé</p></div>
                     <div id="b-plat-1"></div>
                     <div id="b-plat-2"></div>
                     <div id="b-plat-3"></div>
