--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
             <div id="box-header">
                 <div id="box-header-top">
                     <div id="logo-header"></div>
-                    <div id="panier-header"></div>
+                    <div id="panier-header"><svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" data-name="Layer 1" viewBox="0 0 24 24"><path d="M20.941,8C20.442,3.507,16.625,0,12,0S3.558,3.507,3.059,8H-.021l1.918,13.425c.21,1.468,1.486,2.575,2.97,2.575h14.266c1.483,0,2.76-1.107,2.97-2.575l1.918-13.425h-3.079ZM12,2c3.519,0,6.432,2.614,6.92,6H5.08c.488-3.386,3.401-6,6.92-6Zm-4,18h-2V12h2v8Zm5,0h-2V12h2v8Zm5,0h-2V12h2v8Z"></svg>
+                </div>
                 </div>
                 <div id="h1-header">
                     <h1>Fat Kitchen</h1>
                 </div>
                 <div id="p-description">
-                    <p>Fat Kitchen vous propose, le temps d'un repas, de vous plonger dans un univers gras et coloré, où le plaisir des papilles est roi. En un clic, nous vous livrons directement chez vous. Profitez de nos saveurs réconfortantes, élaborées grâce aux produits les plus caloriques du marché !</p>
+                    <p class="p1">Fat Kitchen vous propose, le temps d'un repas, de vous plonger dans un univers <span class="p1-gras">gras</span> et <span class="p1-c">c</span><span class="p1-o">o</span><span class="p1-l">l</span><span class="p1-o2">o</span><span class="p1-r">r</span><span class="p1-é">é</span>, où le plaisir des papilles est roi.</p> 
+                    <p class="p2">Profitez de nos saveurs réconfortantes, élaborées grâce aux produits les plus caloriques du marché !</p>
+                    <p class="p3">Commandez en un clic et nous livrons chez vous : <span class="p3-simple">simple, rapide et</span> <span class="p3-gras">gras</span> <span class="p3-excl">!</span></p> 
                 </div>
             </div>
         </header>
