--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <h1>Fat Kitchen</h1>
                 </div>
                 <div id="p-description">
-                    <p class="p1">Fat Kitchen vous propose, le temps d'un repas, de vous plonger dans un univers <span class="p1-gras">gras</span> et <span class="p1-c">c</span><span class="p1-o">o</span><span class="p1-l">l</span><span class="p1-o2">o</span><span class="p1-r">r</span><span class="p1-é">é</span>, où le plaisir des papilles est roi.</p> 
+                    <p class="p1">Fat Kitchen vous propose, le temps d'un repas, de vous plonger dans un univers <span class="p1-gras">gras</span> et <span class="p1-c">c</span><span class="p1-o">o</span><span class="p1-l">l</span><span class="p1-o2">o</span><span class="p1-r">r</span><span class="p1-e">é</span>, où le plaisir des papilles est roi.</p> 
                     <p class="p2">Profitez de nos saveurs réconfortantes, élaborées grâce aux produits les plus caloriques du marché !</p>
                     <p class="p3">Commandez en un clic et nous livrons chez vous : <span class="p3-simple">simple, rapide et</span> <span class="p3-gras">gras</span> <span class="p3-excl">!</span></p> 
                 </div>
@@ -33,20 +33,20 @@
         </header>
         <main>
             <div id="cartes">
-                <div id="carte-végé">
-                    <div id="v-titre"><p class="végé-txt">Végé</p></div>
+                <div id="carte-vege">
+                    <div id="v-titre"><p class="vege-txt">Végé</p></div>
                     <div id="v-plat-1"></div>
                     <div id="v-plat-2"></div>
                     <div id="v-plat-3"></div>
                 </div>
-                <div id="carte-sucré">
-                    <div id="s-titre"><p class="sucré-txt">Sucré</p></div>
+                <div id="carte-sucre">
+                    <div id="s-titre"><p class="sucre-txt">Sucré</p></div>
                     <div id="s-plat-1"></div>
                     <div id="s-plat-2"></div>
                     <div id="s-plat-3"></div>
                 </div>
-                <div id="carte-bouffé">
-                    <div id="b-titre"><p class="bouffé-txt">Bouffé</p></div>
+                <div id="carte-bouffe">
+                    <div id="b-titre"><p class="bouffe-txt">Bouffé</p></div>
                     <div id="b-plat-1"></div>
                     <div id="b-plat-2"></div>
                     <div id="b-plat-3"></div>
